Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15868

LFSCK fix inconsistencies in directory migration failure

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      If directory migration fails in the middle, the system may become inconsistent, and some files may get missing. LFSCK should use the informations in directory layout to restore system to consistent mode.

      This will be done in two phases, in the first phase, LFSCK against such directories won't resolve all the inconsistencies, but it shouldn't cause additional issues, and after LFSCK the directories should be accessed, though some file may get lost, while in the second phase, LFSCK should use the informations in directory layout to restore system to consistent mode, and should avoid file missing.

            laisiyao Lai Siyao
            laisiyao Lai Siyao
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: